# python-project-lvl2

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  tests.yml
gendiff/: core.py  diff.py  file_operations.py  formatting.py
gendiff/formats/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_core.py  test_diff.py  test_generate_diff.py
tests/fixtures/: expected_dicts.py  expected_diff.py  expected_diffs.py  expected_tests_results.py  file1_nested.yaml  file1_nested_one.yaml  file2_nested_one.yaml
