[tool.poetry]
name = "hexlet-code"
version = "0.8.0"
description = "a tool for files difference generating"
authors = ["alexandra <momotav717@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.coverage.run]
branch = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.3.0"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.7.0"
pre-commit = "^3.3.3"
gitlint = "^0.19.1"
mypy = "^1.4.1"
types-pyyaml = "^6.0.12.11"

[tool.flake8]
accept-encodings = "utf-8"
max-complexity = 10
statistics = false
# black compatibility
max-line-length = 88
extend-ignore = "E203"
doctests = true
enable-extensions = "G"
isort-show-traceback = true

# black loves the double quotes
ignore = "Q000"

# it is possibble to have prints in scripts
per-file-ignores = ["gendiff/scripts/*.py: WPS421", "tests/fixtures/expected_diff_nested.txt: W291"]

[tool.pytest]
norecursedirs = "__pycache__"
addopts = "--strict-markers"

[tool.isort]
# See https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
include_trailing_comma = true
default_section = "FIRSTPARTY"
# Should be: 80 - 1
line_length = 79

[tool.mypy]
strict = true
exclude = "tests/*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
